# apple-fm-gateway

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: dependencies.py  main.py
app/anthropic/: __init__.py  adapter.py  errors.py  schemas.py
app/core/: __init__.py  errors.py  generation.py  token_estimation.py  types.py
app/internal/: admin.py
app/openai/: __init__.py  adapter.py  errors.py  schemas.py
app/routers/: __init__.py  anthropic.py  chat.py  models.py
tests/: test_anthropic_api.py  test_api.py
