[project]
name = "apple-fm-openai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apple-fm-sdk",
]

[tool.uv.workspace]
members = [
    "third_party/python-apple-fm-sdk",
]

[tool.uv.sources]
apple-fm-sdk = { workspace = true }

