[project]
name = "apple-fm-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apple-fm-sdk",
    "fastapi[standard]>=0.133.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.2",
    "ty>=0.0.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "third_party/python-apple-fm-sdk",
]

[tool.uv.sources]
apple-fm-sdk = { workspace = true }
