[project]
name = "apple-fm-gateway"
version = "0.1.0"
description = "API compatibility layer for Apple's on-device Foundation Models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apple-fm-sdk",
    "fastapi[standard]>=0.133.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "ruff>=0.15.2",
    "ty>=0.0.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "third_party/python-apple-fm-sdk",
]

[tool.uv.sources]
apple-fm-sdk = { workspace = true }
